workshop3/db-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: app-ns
  labels:
    version: v1
