workshop3/db-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-db-deploy
  namespace: app-ns
  labels:
    name: app-db
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      name: app-db
      version: v1
  template:
    metadata:
      name: app-db-pod
      labels:
        name: app-db
        version: v1
    spec:
      volumes:
      - name: app-db-pv
        persistentVolumeClaim:
          claimName: app-pvc
      containers:
      - name: app-db-con
        image: njmingz/course-example-northwind-db:0.0.2
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: "200m"
            memory: "512Mi"
        ports:
        - name: app-db-port
          containerPort: 3306
        volumeMounts:
        - name: app-db-pv
          mountPath: /var/lib/mysql
