workshop3/serverv1-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-serve-deploy-1
  namespace: app-ns
  labels:
    name: app-serve
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      name: app-serve
      version: v1
  template:
    metadata:
      name: app-serve-pod-1
      labels:
        name: app-serve
        version: v1
    spec:
      containers:
      - name: app-serve-container
        image: stackupiss/northwind-app:v1
        imagePullPolicy: IfNotPresent
        ports:
        - name: app-serve-port
          containerPort: 3000
