workshop3/serverv2-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-serve-deploy-2
  namespace: app-ns
  labels:
    name: app-serve
    version: v2
spec:
  replicas: 2
  selector:
    matchLabels:
      name: app-serve
      version: v2
  template:
    metadata:
      name: app-serve-pod-2
      labels:
        name: app-serve
        version: v2
    spec:
      containers:
      - name: app-serve-container
        image: stackupiss/northwind-app:v2
        imagePullPolicy: IfNotPresent
        ports:
        - name: app-serve-port
          containerPort: 3000
