workshop3/serverv1-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app-serve-svc-1
  namespace: app-ns
  labels:
    name: app-serve
    version: v1
spec:
  type: ClusterIP
  selector:
    name: app-serve
    version: v1
  ports:
  - name: http
    port: 80
    targetPort: app-serve-port
