workshop3/serverv2-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app-serve-svc-2
  namespace: app-ns
  labels:
    name: app-serve
    version: v2
spec:
  type: ClusterIP
  selector:
    name: app-serve
    version: v2
  ports:
  - name: http
    port: 80
    targetPort: app-serve-port
